# AIEngine

./: CMakeLists.txt
common/: error.cc  error.h  json.h
core/: backend.cc  backend.h  backend_config.cc  backend_config.h  backend_manager.cc  backend_manager.h  backend_model.cc  backend_model.h  backend_model_instance.cc  backend_model_instance.h  constants.h  file_utils.cc  file_utils.h  message.h  model.cc  model.h  model_config.cc  model_config.h  model_config.pb.cc  model_config.pb.h  model_config.proto  model_config_utils.cc  model_config_utils.h  platform.cc  platform.h  rate_limiter.h  scheduler.h  server.cc  server.h  shared_library.cc  shared_library.h  status.cc  status.h
demo/: CMakeLists.txt
interface/: IBackend.h  IServer.h
test/: model_config_test.cc  model_config_test.h  unit_test_main.cc
test/data/: config.pbtxt
